--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. 注意，PlaceFragment布局已有搜索框布局，不需要原生ActionBar-->
-    <style name="Theme.Sunnyweather" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.Sunnyweather" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
